fix credential offer page overflow

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -51,7 +51,7 @@ header .logo {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: 1em;
+	padding: 0 1em;
 	text-align: center;
 }
 
